@@ -30,6 +30,7 @@
 #include "wx/wx.h"
 #include <wx/dynarray.h>
 #include <wx/string.h>
+#include "fontcontainer.h"
 
 #define COMPONENT_TYPE_ABSTRACT 0
 #define COMPONENT_TYPE_WINDOW   1
@@ -66,7 +67,7 @@ class IObject
  public:
   virtual bool     IsNull (const wxString& pname) = 0;
   virtual int      GetPropertyAsInteger (const wxString& pname) = 0;
-  virtual wxFont   GetPropertyAsFont    (const wxString& pname) = 0;
+  virtual wxFontContainer   GetPropertyAsFont    (const wxString& pname) = 0;
   virtual wxColour GetPropertyAsColour  (const wxString& pname) = 0;
   virtual wxString GetPropertyAsString  (const wxString& pname) = 0;
   virtual wxPoint  GetPropertyAsPoint   (const wxString& pname) = 0;
