@@ -9,6 +9,11 @@ date Version 3.00.46 (Beta 3)
 * Fixed import of "enabled", "hidden", and "subclass" properties.
 * Fixed "FS#208 - Error in generated OnUpdateUI event handler registration code."
 + Added "FS#211 - Optimized code/xrc generation in preview editors"
+^ Massive font update.
+    Default values for font properties are now allowed and encouraged.
+    The "underline" and "family" subproperties are now recognized.
+    Fixed FS#205 - "wxStaticText If you bold a font and then remove the bold, the size shows up wrong"
+    Watch for bugs.   
 
 06/13/2007 Version 3.00.45 (Beta 3)
 * Fixed FS#198 - "Wrong place of the ID in a wxHyperlinkCtrl."
